--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- HEADER -->
-    <!-- SUB HEAD -->
+    <h1>Welcome to Riyadh</h1>
+    <h
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
