--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      
+      <img src="./images/"
     </div>
   </div>
 </body>
