Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="http://165.227.81.218:60158/images/transit.jpg" alt="transit">
+      <img src="http://165.227.81.218:60158/transit.jpg" alt="transit">
     </div>
   </div>
 </body>
