--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="images/transit.jpg" alt="transit">
+      <img src="transit.jpg" alt="Modern Transit">
       <h3></h3>
     </div>
   </div>
